# aws-lc-rs

./: .gitignore  .gitmodules  404.html  BUILDING.md  Cargo.toml  Cross.toml  Cross.toml.passthrough-only  Makefile  NOTICE  README.md  RELEASING.md  STYLE.md  build.rs  faq.html  index.html  platform_support.html  print.html  resources.html  searchindex.js  searchindex.json
aws-lc-fips-sys/: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  rust_wrapper.c
aws-lc-fips-sys/builder/: bindgen.rs  cmake_builder.rs  main.rs  printenv.bat  sys_bindgen.rs
aws-lc-fips-sys/generated-include/: boringssl_prefix_symbols.h  boringssl_prefix_symbols_asm.h  boringssl_prefix_symbols_nasm.inc
aws-lc-fips-sys/include/: rust_wrapper.h
aws-lc-fips-sys/src/: aarch64_apple_darwin_crypto.rs  aarch64_apple_darwin_crypto_ssl.rs  aarch64_unknown_linux_gnu_crypto.rs  aarch64_unknown_linux_gnu_crypto_ssl.rs  aarch64_unknown_linux_musl_crypto.rs  aarch64_unknown_linux_musl_crypto_ssl.rs  lib.rs  linux_aarch64_crypto.rs  linux_aarch64_crypto_ssl.rs  linux_x86_64_crypto.rs  linux_x86_64_crypto_ssl.rs  x86_64_apple_darwin_crypto.rs  x86_64_apple_darwin_crypto_ssl.rs  x86_64_unknown_linux_gnu_crypto.rs  x86_64_unknown_linux_gnu_crypto_ssl.rs  x86_64_unknown_linux_musl_crypto.rs  x86_64_unknown_linux_musl_crypto_ssl.rs
aws-lc-fips-sys/symbols/: aarch64-apple-darwin.txt  aarch64-unknown-linux-gnu.txt  aarch64-unknown-linux-musl.txt  linux_aarch64.txt  linux_x86_64.txt  x86_64-apple-darwin.txt  x86_64-unknown-linux-gnu.txt  x86_64-unknown-linux-musl.txt
aws-lc-rs/: Cargo.toml  Cross.toml  Makefile  README.md  README.tpl  build.rs
aws-lc-rs-bench/: Cargo.toml  README.md
aws-lc-rs-bench/src/: benchmarks.rs  main.rs
aws-lc-rs-testing/: Cargo.toml  Makefile
aws-lc-rs-testing/benches/: aead_benchmark.rs  agreement_benchmark.rs  cipher_benchmark.rs  digest_benchmark.rs  hkdf_benchmark.rs  hmac_benchmark.rs  kem_benchmark.rs  pbkdf2_benchmark.rs  quic_benchmark.rs  rsa_benchmark.rs
aws-lc-rs-testing/tests/: aead_test.rs  agreement_tests.rs  hkdf_test.rs  quic_test.rs  rsa_test.rs
aws-lc-rs/benches/: agreement_benchmark.rs  cipher_benchmark.rs  ecdsa_benchmark.rs  ed25519_benchmark.rs  hkdf_benchmark.rs  hmac_benchmark.rs  kem_benchmark.rs  quic_benchmark.rs  rsa_benchmark.rs
aws-lc-rs/examples/: cipher.rs  digest.rs
aws-lc-rs/scripts/: run-rustls-integration.sh  run-s2n-quic-integration.sh  run-valgrind.sh  run-windows-debug-crt-static-test.sh
aws-lc-rs/src/: aead.rs  aead_xaes_256_gcm.rs  agreement.rs  bn.rs  buffer.rs  cbb.rs  cbs.rs  cipher.rs  cmac.rs  constant_time.rs  debug.rs  digest.rs  ec.rs  ed25519.rs  encoding.rs  endian.rs  error.rs  evp_pkey.rs  fips.rs  hex.rs  hkdf.rs  hmac.rs  io.rs  iv.rs  kdf.rs  kem.rs  key_transport.rs  key_wrap.rs  lib.rs  nonce.rs  pbkdf2.rs  pkcs8.rs  pq.rs  pqdsa.rs  ptr.rs  public_key.rs  rand.rs  rsa.rs  signature.rs  test.rs  (+2 more)
aws-lc-rs/tests/: XAes_256_Gcm_test.rs  aead_test.rs  agreement_tests.rs  basic_aead_test.rs  basic_openssh_test.rs  basic_quic_test.rs  basic_rsa_test.rs  cipher_test.rs  cmac_test.rs  cmac_tests.rs  digest_test.rs  ecdsa_digest_tests.rs  ecdsa_tests.rs  ed25519_tests.rs  hkdf_test.rs  hmac_test.rs  kdf_test.rs  kem_tests.rs  key_transport_tests.rs  pbkdf2_test.rs  pqdsa_test.rs  quic_test.rs  rand_test.rs  rsa_test.rs  unsealed_rand_test.rs
aws-lc-rs/util/: process-criterion-csv.rs
aws-lc-rust/: Cargo.toml  LICENSE  README.md  README.tpl
aws-lc-rust/benches/: digest_benchmark.rs  ed25519_benchmark.rs  hkdf_benchmark.rs  hmac_benchmark.rs  pbkdf2_benchmark.rs  quic_benchmark.rs
aws-lc-rust/examples/: digest.rs
aws-lc-rust/scripts/: run-rustls-integration.sh  run-s2n-quic-integration.sh
aws-lc-rust/src/: aead.rs  agreement.rs  cbb.rs  constant_time.rs  debug.rs  digest.rs  ec.rs  ed25519.rs  endian.rs  error.rs  evp_pkey.rs  hkdf.rs  hmac.rs  io.rs  lib.rs  pbkdf2.rs  pkcs8.rs  ptr.rs  rand.rs  rsa.rs  signature.rs  test.rs
aws-lc-rust/tests/: aead_test.rs  agreement_tests.rs  basic_aead_test.rs  basic_openssh_test.rs  basic_rsa_test.rs  digest_test.rs  ecdsa_tests.rs  ed25519_tests.rs  hkdf_test.rs  hmac_test.rs  pbkdf2_test.rs  quic_test.rs  rand_test.rs  rsa_test.rs
aws-lc-sys/: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  rust_wrapper.c
aws-lc-sys/.cargo/: config.toml
aws-lc-sys/builder/: bindgen.rs  cc_builder.rs  cmake_builder.rs  main.rs  nasm_builder.rs  prebuilt-nasm.bat  prebuilt-nasm.sh  sys_bindgen.rs
aws-lc-sys/generated-include/: boringssl_prefix_symbols.h  boringssl_prefix_symbols_asm.h  boringssl_prefix_symbols_nasm.inc
aws-lc-sys/include/: rust_wrapper.h
aws-lc-sys/src/: aarch64_apple_darwin_crypto.rs  aarch64_apple_darwin_crypto_ssl.rs  aarch64_linux_android_crypto.rs  aarch64_pc_windows_msvc_crypto.rs  aarch64_unknown_linux_gnu_crypto.rs  aarch64_unknown_linux_gnu_crypto_ssl.rs  aarch64_unknown_linux_musl_crypto.rs  aarch64_unknown_linux_musl_crypto_ssl.rs  i686_pc_windows_msvc_crypto.rs  i686_unknown_linux_gnu_crypto.rs  i686_unknown_linux_gnu_crypto_ssl.rs  lib.rs  linux_aarch64_crypto.rs  linux_aarch64_crypto_ssl.rs  linux_x86_64_crypto.rs  linux_x86_64_crypto_ssl.rs  linux_x86_crypto.rs  linux_x86_crypto_ssl.rs  macos_aarch64_crypto.rs  macos_aarch64_crypto_ssl.rs  macos_x86_64_crypto.rs  macos_x86_64_crypto_ssl.rs  riscv64gc_unknown_linux_gnu_crypto.rs  universal_crypto.rs  universal_no_u1_crypto.rs  universal_no_u1_prefixed_crypto.rs  universal_prefixed_crypto.rs  x86_64_alpine_linux_musl_crypto.rs  x86_64_apple_darwin_crypto.rs  x86_64_apple_darwin_crypto_ssl.rs  x86_64_pc_windows_gnu_crypto.rs  x86_64_pc_windows_msvc_crypto.rs  x86_64_unknown_linux_gnu_crypto.rs  x86_64_unknown_linux_gnu_crypto_ssl.rs  x86_64_unknown_linux_musl_crypto.rs  x86_64_unknown_linux_musl_crypto_ssl.rs
aws-lc-sys/symbols/: aarch64-apple-darwin.txt  aarch64-pc-windows-msvc.txt  aarch64-unknown-linux-gnu.txt  aarch64-unknown-linux-musl.txt  arm-unknown-linux-gnueabi.txt  (+15 more)
builder-test/: Cargo.toml
links-testing/: Cargo.toml  build.rs
sys-testing/: Cargo.toml  build.rs
(+289870 files in other folders)
