[workspace]
members = [
    "aws-lc-rs",
    "aws-lc-sys",
    "aws-lc-fips-sys",
    "aws-lc-rs-testing",
    "links-testing",
]
exclude = [
    "scripts/tools/cargo-dig.rs",
    "scripts/tools/semver.rs",
    "scripts/tools/target-platform.rs",
    "scripts/tests/assert_cpu_jitter_entropy.rs",
    "scripts/tests/prefix_test.rs"
]
resolver = "2"

[workspace.dependencies]
bindgen = "0.72.0"
cc = "1.2.26"
clap = "=4.5.43"# v4.5 is MSRV 1.74
cmake = "0.1.54"
criterion = "0.5.1" # v0.6.0 depends on clap v4.5
dunce = "1.0.5"
fs_extra = "1.3.0"
hex = "0.4.3"
lazy_static = "1.5.0"
openssl = "0.10.73"
paste = "1.0.15"
regex = "1.11.1"
ring = "0.17.14"
untrusted = "0.7.1"
zeroize = "1.8.1"
toml_edit = "0.23.0"

[profile.bench]
lto = true

[profile.release-lto]
inherits = "release"
lto = true
