[package]
name = "aws-lc-fips-sys"
description = "AWS-LC is a general-purpose cryptographic library maintained by the AWS Cryptography team for AWS and their customers. This is the FIPS validated version of AWS-LC."
version = "0.12.12"
links = "aws_lc_fips_0_12_12"
authors = ["AWS-LC"]
edition = "2021"
repository = "https://github.com/aws/aws-lc-rs"
license = "ISC AND (Apache-2.0 OR ISC) AND OpenSSL"
rust-version = "1.63.0"
include = [
    "LICENSE",
    "/aws-lc/**/*.c",
    "/aws-lc/**/*.cc",
    "/aws-lc/**/*.pl",
    "/aws-lc/**/*.h",
    "/aws-lc/**/*.S",
    "/aws-lc/**/*.asm",
    "/aws-lc/**/CMakeLists.txt",
    "/aws-lc/**/*.cmake",
    "/aws-lc/**/*.errordata",
    "/aws-lc/**/*.go",
    "/aws-lc/go.mod",
    "/aws-lc/go.sum",
    "/aws-lc/**/*.lds",
    "!/aws-lc/bindings/**",
    "!/aws-lc/docs/**",
    "!/aws-lc/fuzz/**",
    "!/aws-lc/generated-src/crypto_test_data.cc",
    "!/aws-lc/tests/**",
    "!/aws-lc/third_party/**",
    "!/aws-lc/util/**",
    "/aws-lc/tests/compiler_features_tests/**.c",
    "/aws-lc/third_party/fiat/**/LICENSE",
    "/aws-lc/third_party/fiat/**/*.h",
    "/aws-lc/third_party/s2n-bignum/**/*.S",
    "/aws-lc/third_party/s2n-bignum/**/*.h",
    "/aws-lc/third_party/jitterentropy/**",
    "/aws-lc/util/fipstools/**/CMakeLists.txt",
    "/aws-lc/util/fipstools/**/*.c",
    "/aws-lc/util/fipstools/**/*.cc",
    "/aws-lc/util/fipstools/**/*.go",
    "/aws-lc/util/ar/**/*.go",
    "/aws-lc/util/godeps.go",
    "/CMakeLists.txt",
    "/builder/**/*.rs",
    "/builder/printenv.bat",
    "/Cargo.toml",
    "/generated-include/**",
    "/include/**",
    "/rust_wrapper.c",
    "/src/**/*.rs",
    "/tests/**/*.rs",
]
build = "builder/main.rs"

[features]
asan = []
ssl = []
bindgen = ["dep:bindgen"] # Generate the bindings on the targetted platform as a fallback mechanism.

[build-dependencies]
cmake = "0.1.48"
dunce = "1.0"
fs_extra = "1.3"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), any(target_os = "linux", target_os = "macos"), any(target_env = "gnu", target_env = "musl", target_env = "")))'.build-dependencies]
bindgen = { version = "0.69.2", optional = true }

[target.'cfg(not(all(any(target_arch = "x86_64", target_arch = "aarch64"), any(target_os = "linux", target_os = "macos"), any(target_env = "gnu", target_env = "musl", target_env = ""))))'.build-dependencies]
bindgen = { version = "0.69.2" }

[dependencies]
libc = "0.2.121"
paste = "1.0.11"

[package.metadata.aws-lc-fips-sys]
commit-hash = "ec94d74a19b5a0aa738b436a95bb06ff87fc7ba9"
