[package]
name = "aws-lc-rs"
authors = ["AWS-LibCrypto"]
version = "1.6.1"
edition = "2021"
rust-version = "1.61.0"
keywords = ["crypto", "cryptography", "security"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-lc-rs is a cryptographic library using AWS-LC for its cryptographic operations. This library strives to be API-compatible with the popular Rust library named ring."
documentation = "https://docs.rs/crate/aws-lc-rs"
homepage = "https://github.com/awslabs/aws-lc-rs"
repository = "https://github.com/awslabs/aws-lc-rs"
# Exclude tests and test data from published crate
exclude = [
    "third_party/NIST/*",
    "tests/**/*",
    "*.txt",
    "*.p8",
    "*.der",
    "*.bin",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["unstable"]

[features]
alloc = []
default = ["aws-lc-sys", "alloc", "ring-io", "ring-sig-verify"]
ring-io = ["dep:untrusted"]
ring-sig-verify = ["dep:untrusted"]
bindgen = ["aws-lc-sys?/bindgen", "aws-lc-fips-sys?/bindgen"]
asan = ["aws-lc-sys?/asan", "aws-lc-fips-sys?/asan"]
test_logging = []
unstable = []

# require non-FIPS
non-fips = ["aws-lc-sys"]

# require FIPS
fips = ["dep:aws-lc-fips-sys"]

[dependencies]
untrusted = { version = "0.7.1", optional = true }
aws-lc-sys = { version = "0.13.0", path = "../aws-lc-sys", optional = true }
aws-lc-fips-sys = { version = "0.12.0", path = "../aws-lc-fips-sys", optional = true }
zeroize = "1.7"
mirai-annotations = "1.12.0"
paste = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
clap = { version = "4.1.8", features = ["derive"] }
hex = "0.4.3"

# Pinned dependencies to preserve Rust 1.61 as MSRV
regex = "~1.9.6"
regex-automata = "~0.3.9"
regex-syntax = "~0.7.5"
