[package]
name = "aws-lc-rust"
authors = ["AWS-LibCrypto"]
version = "0.3.0"
edition = "2021"
rust-version = "1.60"
keywords = ["crypto", "cryptography", "security"]
license = "Apache-2.0 OR ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = []
default = ["aws-lc-sys", "alloc", "ring-io", "ring-sig-verify"]
ring-io = ["dep:untrusted"]
ring-sig-verify = ["dep:untrusted"]
ring-benchmarks = []
bindgen = ["aws-lc-sys?/bindgen", "aws-lc-fips-sys?/bindgen"]
asan = ["aws-lc-sys?/asan", "aws-lc-fips-sys?/asan"]

# require non-FIPS
non-fips = ["aws-lc-sys"]

# require FIPS
fips = ["dep:aws-lc-fips-sys"]

[dependencies]
untrusted = { version = "0.7.1", optional = true }
aws-lc-sys = { version = "0.5.0", path = "../aws-lc-sys", optional = true }
aws-lc-fips-sys = { version = "0.6.0", path = "../aws-lc-fips-sys", optional = true }
zeroize = "1"
mirai-annotations = "1.12.0"

[dev-dependencies]
paste = "1.0"
criterion = "0.4.0"
# TODO: Remove this once "csv_output" fix has been published
#criterion = { git="https://github.com/bheisler/criterion.rs.git", features = ["csv_output"]}
ring = "0.16"
regex = "1.6.0"
lazy_static = "1.4.0"
clap = {version = "4.1.8", features = ["derive"]}

[[bench]]
name = "aead_benchmark"
harness = false

[[bench]]
name = "digest_benchmark"
harness = false

[[bench]]
name = "hkdf_benchmark"
harness = false

[[bench]]
name = "hmac_benchmark"
harness = false

[[bench]]
name = "pbkdf2_benchmark"
harness = false

[[bench]]
name = "quic_benchmark"
harness = false

[[bench]]
name = "rsa_benchmark"
harness = false

[[bench]]
name = "ecdsa_benchmark"
harness = false

[[bench]]
name = "ed25519_benchmark"
harness = false

[[bench]]
name = "agreement_benchmark"
harness = false
