[package]
name = "aws-lc-sys"
description = "AWS-LC is a general-purpose cryptographic library maintained by the AWS Cryptography team for AWS and their customers. It іs based on code from the Google BoringSSL project and the OpenSSL project."
version = "0.22.0"
links = "aws_lc_0_22_0"
authors = ["AWS-LC"]
edition = "2021"
repository = "https://github.com/aws/aws-lc-rs"
license = "ISC AND (Apache-2.0 OR ISC) AND OpenSSL"
rust-version = "1.63.0"
include = [
    "LICENSE",
    "/aws-lc/**/*.c",
    "/aws-lc/**/*.cc",
    "/aws-lc/**/*.pl",
    "/aws-lc/**/*.h",
    "/aws-lc/**/*.S",
    "/aws-lc/**/*.asm",
    "/aws-lc/**/CMakeLists.txt",
    "/aws-lc/**/*.cmake",
    "/aws-lc/**/*.errordata",
    "/aws-lc/**/*.lds",
    "!/aws-lc/bindings/**",
    "!/aws-lc/docs/**",
    "!/aws-lc/fuzz/**",
    "!/aws-lc/generated-src/crypto_test_data.cc",
    "!/aws-lc/tests/**",
    "!/aws-lc/third_party/**",
    "!/aws-lc/util/**",
    "/aws-lc/tests/compiler_features_tests/**.c",
    "/aws-lc/third_party/fiat/**/LICENSE",
    "/aws-lc/third_party/fiat/**/*.h",
    "/aws-lc/third_party/s2n-bignum/**/*.S",
    "/aws-lc/third_party/s2n-bignum/**/*.h",
    "/aws-lc/util/fipstools/**/CMakeLists.txt",
    "/aws-lc/util/fipstools/**/*.c",
    "/CMakeLists.txt",
    "/builder/**/*.rs",
    "/builder/**/*.bat",
    "/builder/**/*.obj",
    "/Cargo.toml",
    "/generated-include/**",
    "/include/**",
    "/rust_wrapper.c",
    "/src/**/*.rs",
    "/tests/**/*.rs",
]
build = "builder/main.rs"

[features]
asan = []
ssl = ['bindgen']
bindgen = ["dep:bindgen"] # Generate the bindings on the targetted platform as a fallback mechanism.
prebuilt-nasm = []

[build-dependencies]
cmake = "0.1.48"
dunce = "1.0"
fs_extra = "1.3"
cc = { version = "1.0.100", features = ["parallel"] }

[target.'cfg(any(all(any(target_arch="x86_64",target_arch="aarch64"),any(target_os="linux",target_os="macos",target_os="windows"),any(target_env="gnu",target_env="musl",target_env="msvc",target_env="")),all(target_arch="x86",target_os="windows",target_env="msvc"),all(target_arch="x86",target_os="linux",target_env="gnu")))'.build-dependencies]
bindgen = { version = "0.69.2", optional = true }

[target.'cfg(not(any(all(any(target_arch="x86_64",target_arch="aarch64"),any(target_os="linux",target_os="macos",target_os="windows"),any(target_env="gnu",target_env="musl",target_env="msvc",target_env="")),all(target_arch="x86",target_os="windows",target_env="msvc"),all(target_arch="x86",target_os="linux",target_env="gnu"))))'.build-dependencies]
bindgen = { version = "0.69.2" }

[dependencies]
libc = "0.2.121"
paste = "1.0.11"

[package.metadata.aws-lc-sys]
commit-hash = "8b2ebfcf3fc8b0656f1f4161166484a70238aeaa"
