[package]
name = "aws-lc-sys"
description = "AWS-LC is a general-purpose cryptographic library maintained by the AWS Cryptography team for AWS and their customers. It іs based on code from the Google BoringSSL project and the OpenSSL project."
version = "0.32.3"
links = "aws_lc_0_32_3"
authors = ["AWS-LC"]
edition = "2021"
repository = "https://github.com/aws/aws-lc-rs"
license = "ISC AND (Apache-2.0 OR ISC) AND OpenSSL"
rust-version = "1.70.0"
include = [
    "LICENSE",
    "/aws-lc/**/*.c",
    "/aws-lc/**/*.cc",
    "/aws-lc/**/*.pl",
    "/aws-lc/**/*.h",
    "/aws-lc/**/*.h.in",
    "/aws-lc/**/*.i",
    "/aws-lc/**/*.S",
    "/aws-lc/**/*.asm",
    "/aws-lc/**/CMakeLists.txt",
    "/aws-lc/**/*.cmake",
    "/aws-lc/**/*.errordata",
    "/aws-lc/**/err_data_generate.go",
    "/aws-lc/**/*.lds",
    "/aws-lc/**/*.inc",
    "!/aws-lc/bindings/**",
    "!/aws-lc/docs/**",
    "!/aws-lc/fuzz/**",
    "!/aws-lc/generated-src/crypto_test_data.cc",
    "!/aws-lc/tests/**",
    "!/aws-lc/third_party/**",
    "!/aws-lc/util/**",
    "!/aws-lc/tool/**",
    "!/aws-lc/tool-openssl/**",
    "/aws-lc/tests/compiler_features_tests/**.c",
    "/aws-lc/third_party/fiat/**/LICENSE",
    "/aws-lc/third_party/fiat/**/*.h",
    "/aws-lc/third_party/s2n-bignum/**/*.S",
    "/aws-lc/third_party/s2n-bignum/**/*.h",
    "/aws-lc/third_party/jitterentropy/**/*.c",
    "/aws-lc/third_party/jitterentropy/**/*.h",
    "/aws-lc/third_party/jitterentropy/CMakeLists.txt",
    "!/aws-lc/third_party/jitterentropy/jitterentropy-library/tests/**",
    "/aws-lc/util/fipstools/**/CMakeLists.txt",
    "/aws-lc/util/fipstools/**/*.c",
    "/CMakeLists.txt",
    "/builder/**/*.rs",
    "/builder/**/*.bat",
    "/builder/**/*.sh",
    "/builder/**/*.obj",
    "/Cargo.toml",
    "/generated-include/**",
    "/include/**",
    "/rust_wrapper.c",
    "/src/**/*.rs",
    "/tests/**/*.rs",
]
build = "builder/main.rs"

[features]
asan = []
ssl = ['bindgen']
bindgen = ["dep:bindgen"] # Generate the bindings on the targeted platform as a fallback mechanism.
prebuilt-nasm = []

[build-dependencies]
cmake.workspace = true
dunce.workspace = true
fs_extra.workspace = true
cc = { workspace = true, features = ["parallel"] }

[target.'cfg(any(all(any(target_arch="x86_64",target_arch="aarch64"),any(target_os="linux",target_os="macos",target_os="windows"),any(target_env="gnu",target_env="musl",target_env="msvc",target_env="")),all(target_arch="x86",target_os="windows",target_env="msvc"),all(target_arch="x86",target_os="linux",target_env="gnu")))'.build-dependencies]
bindgen = { workspace = true, optional = true }

[target.'cfg(not(any(all(any(target_arch="x86_64",target_arch="aarch64"),any(target_os="linux",target_os="macos",target_os="windows"),any(target_env="gnu",target_env="musl",target_env="msvc",target_env="")),all(target_arch="x86",target_os="windows",target_env="msvc"),all(target_arch="x86",target_os="linux",target_env="gnu"))))'.build-dependencies]
bindgen.workspace = true

[package.metadata.aws-lc-sys]
commit-hash = "5a9df2190d9ecab090a62030f94a6ada6789a436"
