[package]
name = "builder-test"
version = "0.1.0"
edition = "2021"
publish = false
description = "Test harness for aws-lc-sys builder modules - does not duplicate code"

# This crate exists solely to run unit tests defined in builder/main.rs and its
# modules. The builder code normally compiles only as a build script, so many
# functions appear "unused" when compiled as a library here.
[lints.rust]
dead_code = "allow"
unused = "allow"

[lib]
name = "builder"
path = "../builder/main.rs"

[dependencies]
# All dependencies that builder/main.rs requires
cc = { workspace = true, features = ["parallel"] }
cmake = { workspace = true }
dunce = { workspace = true }
fs_extra = { workspace = true }
bindgen = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
# Mirrors aws-lc-sys: builder/system_detect.rs uses pkg-config on Unix.
pkg-config = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
# Mirror the features from aws-lc-sys that affect builder compilation
bindgen = ["dep:bindgen"]
fips = ["dep:bindgen"]
ssl = ["bindgen"]
all-bindings = []
prebuilt-nasm = []
disable-prebuilt-nasm = []
asan = []
