[package]
name = "links-testing"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["aws-lc-sys"]
aws-lc-rs = ["dep:aws-lc-rs"]
aws-lc-rs-fips = ["aws-lc-rs", "aws-lc-rs/fips"]
aws-lc-sys = ["dep:aws-lc-sys"]
aws-lc-fips-sys = ["dep:aws-lc-fips-sys"]

[dependencies]
aws-lc-rs = { path = "../aws-lc-rs", optional = true }
aws-lc-sys = { path = "../aws-lc-sys", optional = true }
aws-lc-fips-sys = { path = "../aws-lc-fips-sys", optional = true }

[build-dependencies]
cc = "1.0.72"
toml_edit = "0.22"

[package.metadata.cargo-udeps.ignore]
normal = ["aws-lc-rs", "aws-lc-sys", "aws-lc-fips-sys"] # the sys crate is only used through a C library build
